[gd_scene load_steps=2 format=3 uid="uid://dqw8m3k5npx2r"]

[ext_resource type="Script" uid="uid://ckw8m3k5npx2r" path="res://_ui/loading_screen.gd" id="1_loading"]

[node name="LoadingScreen" type="CanvasLayer"]
layer = 100
script = ExtResource("1_loading")

[node name="Background" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.05, 0.05, 0.08, 0.95)

[node name="CenterContainer" type="CenterContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MainPanel" type="PanelContainer" parent="CenterContainer"]
custom_minimum_size = Vector2(500, 350)
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/MainPanel"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="TitleLabel" type="Label" parent="CenterContainer/MainPanel/VBoxContainer"]
layout_mode = 2
text = "Generating World"
horizontal_alignment = 1
theme_override_font_sizes/font_size = 28

[node name="HSeparator" type="HSeparator" parent="CenterContainer/MainPanel/VBoxContainer"]
layout_mode = 2

[node name="StageContainer" type="HBoxContainer" parent="CenterContainer/MainPanel/VBoxContainer"]
layout_mode = 2
alignment = 1
theme_override_constants/separation = 20

[node name="StageMap" type="Label" parent="CenterContainer/MainPanel/VBoxContainer/StageContainer"]
layout_mode = 2
text = "● Map"
theme_override_font_sizes/font_size = 14

[node name="Arrow1" type="Label" parent="CenterContainer/MainPanel/VBoxContainer/StageContainer"]
layout_mode = 2
text = "→"
theme_override_colors/font_color = Color(0.5, 0.5, 0.5, 1)

[node name="StageTerrain" type="Label" parent="CenterContainer/MainPanel/VBoxContainer/StageContainer"]
layout_mode = 2
text = "● Terrain"
theme_override_font_sizes/font_size = 14

[node name="Arrow2" type="Label" parent="CenterContainer/MainPanel/VBoxContainer/StageContainer"]
layout_mode = 2
text = "→"
theme_override_colors/font_color = Color(0.5, 0.5, 0.5, 1)

[node name="StageVegetation" type="Label" parent="CenterContainer/MainPanel/VBoxContainer/StageContainer"]
layout_mode = 2
text = "● Vegetation"
theme_override_font_sizes/font_size = 14

[node name="Arrow3" type="Label" parent="CenterContainer/MainPanel/VBoxContainer/StageContainer"]
layout_mode = 2
text = "→"
theme_override_colors/font_color = Color(0.5, 0.5, 0.5, 1)

[node name="StageValidate" type="Label" parent="CenterContainer/MainPanel/VBoxContainer/StageContainer"]
layout_mode = 2
text = "● Validate"
theme_override_font_sizes/font_size = 14

[node name="ProgressBar" type="ProgressBar" parent="CenterContainer/MainPanel/VBoxContainer"]
custom_minimum_size = Vector2(0, 25)
layout_mode = 2
value = 25.0
show_percentage = false

[node name="StageLabel" type="Label" parent="CenterContainer/MainPanel/VBoxContainer"]
layout_mode = 2
text = "Initializing..."
horizontal_alignment = 1
theme_override_font_sizes/font_size = 18

[node name="StatusLabel" type="Label" parent="CenterContainer/MainPanel/VBoxContainer"]
layout_mode = 2
text = "Please wait..."
horizontal_alignment = 1
theme_override_colors/font_color = Color(0.7, 0.7, 0.7, 1)
theme_override_font_sizes/font_size = 14

[node name="HSeparator2" type="HSeparator" parent="CenterContainer/MainPanel/VBoxContainer"]
layout_mode = 2

[node name="AttemptLabel" type="Label" parent="CenterContainer/MainPanel/VBoxContainer"]
visible = false
layout_mode = 2
text = "Attempt 1/3"
horizontal_alignment = 1
theme_override_colors/font_color = Color(1, 0.8, 0.2, 1)
theme_override_font_sizes/font_size = 14

[node name="SeedLabel" type="Label" parent="CenterContainer/MainPanel/VBoxContainer"]
layout_mode = 2
text = "World Seed: 12345678"
horizontal_alignment = 1
theme_override_colors/font_color = Color(0.6, 0.6, 0.6, 1)
theme_override_font_sizes/font_size = 12

[node name="ErrorPanel" type="PanelContainer" parent="CenterContainer/MainPanel/VBoxContainer"]
visible = false
layout_mode = 2

[node name="ErrorLabel" type="Label" parent="CenterContainer/MainPanel/VBoxContainer/ErrorPanel"]
layout_mode = 2
text = "Error: Unknown error occurred"
horizontal_alignment = 1
theme_override_colors/font_color = Color(1, 0.3, 0.3, 1)
autowrap_mode = 2
